@@ -50,6 +50,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-276 After merging in HCATALOG-237 related changes Pig scripts with more than one store fail (daijy via gates)
+
   HCAT-257 e2e harness not working properly after file location change (gates)
 
   HCAT-270 HCatRecord SerDe does not handle List<Map> or List<List> or List<lazy primitive> correctly (khorgath via gates)
